chore: [#183048279] fix home-based deferred question mobile styling

--- a/web/src/styles/base/flex.scss
+++ b/web/src/styles/base/flex.scss
@@ -98,6 +98,12 @@
   }
 }
 
+.mobile-lg\:flex-align-center {
+  @media (min-width: 30em) {
+    align-items: center !important;
+  }
+}
+
 @media only screen and (min-width: $sm) {
   .flex-direction {
     flex-direction: column !important;
